# WardrobeBackend

./: .gitignore  README.md  asgi.py  dev.Dockerfile  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  urls.py  wsgi.py
core/: fields.py  settings.py  viewsets.py
core/management/commands/: dev.py
user/: models.py
user/migrations/: 0001_initial.py
utils/: ai_api.py
wardrobe/: models.py
wardrobe/migrations/: 0001_initial.py
