[tool.poetry]
name = "wardrobe-backend"
version = "0.1.0"
description = "Backend service for wardrobe management application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
Pillow = "^10.1.0"
django-structlog = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
